# koe

./: .gitignore  .tauri-key.pub  LICENSE  PRIVACY.md  README.md  THIRD_PARTY_LICENSES.md  TODO.md  floating.html  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  release.yml
src/: App.tsx  floating.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  lib.rs  main.rs  paste.rs  transcribe.rs
src/components/: FloatingWindow.tsx  Settings.tsx  UpdateChecker.tsx
src/lib/: ThemeContext.tsx  gemini.ts  themes.ts
