[package]
name = "koe"
version = "1.0.0"
edition = "2021"
license = "MIT"

[lib]
name = "koe_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# 音声キャプチャ
# NOTE: cpal は 16kHz mono f32 ストリームで使用
cpal = "0.15"
hound = "3.5"

# Whisper 推論: whisper.cpp バイナリを subprocess で呼ぶ方式
# → whisper-rs の FFI バインディング (MSVC/LLVM 構造体サイズ不一致問題) を回避

# モデル・バイナリダウンロード
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }

# パス解決
dirs = "5"

# 貼り付け
arboard = "3"
enigo = { version = "0.2", features = [] }

[profile.release]
# whisper-rs はリリースビルドで大幅に高速化される
opt-level = 3
lto = "thin"
